plugins {
    id 'eclipse'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '5.1.76'
}

group = 'com.itemban'
version = mod_version
archivesBaseName = 'ItemBan'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

tasks.named('compileJava', JavaCompile).configure {
    options.encoding = 'UTF-8'
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

minecraft {
    mappings channel: 'official', version: minecraft_version

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'debug'
            mods {
                itemban {
                    source sourceSets.main
                }
            }
        }
        server {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'debug'
            mods {
                itemban {
                    source sourceSets.main
                }
            }
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
}

tasks.named('processResources', ProcessResources).configure {
    inputs.property "version", project.version
    inputs.property "mcversion", minecraft_version

    filesMatching('META-INF/mods.toml') {
        expand 'mod_version': project.version,
               'mod_name': project.mod_name,
               'mod_author': project.mod_author,
               'mod_description': project.mod_description
    }
}

jar {
    manifest {
        attributes([
            "Specification-Title": "itemban",
            "Specification-Vendor": "itemban",
            "Specification-Version": "1",
            "Implementation-Title": project.name,
            "Implementation-Version": project.version,
            "Implementation-Vendor" : "itemban",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

afterEvaluate {
    def reobf = tasks.findByName('reobfJar')
    if (reobf != null) {
        tasks.named('jar').configure { finalizedBy reobf }
        tasks.named('assemble').configure { dependsOn reobf }
        tasks.named('build').configure { dependsOn reobf }
    }
}

tasks.register('verifyForgeReobf') {
    dependsOn 'reobfJar'
    doLast {
        def built = layout.buildDirectory.file("libs/${project.archivesBaseName}-${project.version}.jar").get().asFile
        def reobfOut = layout.buildDirectory.file('reobfJar/output.jar').get().asFile
        if (reobfOut.exists()) {
            built.bytes = reobfOut.bytes
        }
        if (!built.exists()) {
            throw new GradleException("Missing output jar: ${built}")
        }
        def zip = new java.util.zip.ZipFile(built)
        try {
            def entry = zip.getEntry('com/itemban/CommandHandler.class')
            if (entry == null) {
                throw new GradleException("CommandHandler.class missing in ${built.name}")
            }
            def text = new String(zip.getInputStream(entry).bytes, 'ISO-8859-1')
            def srg = text.contains('func_')
            if (!srg) {
                throw new GradleException("ItemBan 1.16.5 jar is NOT reobfuscated (CommandHandler missing func_ SRG names). Do not ship ${built.name}.")
            }
        } finally {
            zip.close()
        }
        logger.lifecycle("verifyForgeReobf OK: ${built.name} CommandHandler uses 1.16.5 SRG")
    }
}

tasks.named('build').configure {
    finalizedBy 'verifyForgeReobf'
}
